ARM Session/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "addressPrefix": {
        "type": "string",
        "defaultValue": "10.99.0.0/16",
        "metadata": {
          "description": "Address prefix"
        }
      },
      "subnet1Prefix": {
        "type": "string",
        "defaultValue": "10.99.99.0/24",
        "metadata": {
          "description": "Development subnet Prefix"
        }
      },
      "subnet1Name": {
        "type": "string",
        "defaultValue": "PerfectVM-dev",
        "metadata": {
          "description": "Subnet 1 Name"
        }
      },
      "subnet2Prefix": {
        "type": "string",
        "defaultValue": "10.99.200.0/24",
        "metadata": {
          "description": "Production subnet Prefix"
        }
      },
      "subnet2Name": {
        "type": "string",
        "defaultValue": "PerfectVM-prod",
        "metadata": {
          "description": "Subnet 2 Name"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
    "variables": {
      "DevnetworkSecurityGroupName": "Perfectvm-dev-NSG",
      "ProdnetworkSecurityGroupName": "Perfectvm-prod-NSG",
      "virtualNetworkName": "PerfectVM-Networks"},
    "resources": [
      {
        "apiVersion": "2020-05-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('DevnetworkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "allow_ssh_in",
              "properties": {
                "description": "SSH needed for development and preparations",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound"
              }
            },
            {
              "name": "allow_http_in",
              "properties": {
                "description": "HTTP needed for website provided",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 666,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2020-05-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('ProdnetworkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "deny_ssh_in",
              "properties": {
                "description": "SSH not needed for production",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound"
              }
            },
            {
              "name": "allow_http_in",
              "properties": {
                "description": "HTTP needed for website provided",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 666,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2020-05-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('DevnetworkSecurityGroupName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('addressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnet1Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet1Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('DevnetworkSecurityGroupName'))]"
                }
              }
            },
            {
              "name": "[parameters('subnet2Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet2Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('ProdnetworkSecurityGroupName'))]"
                }
              }
            }
  
          ]
        }
      }
      ]
  }
